[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Graphics/VPSUI/play_5.png" type="Texture2D" id=1]
[ext_resource path="res://Resources/Graphics/VPSUI/sleep_5.png" type="Texture2D" id=2]
[ext_resource path="res://Resources/Graphics/VPSUI/pet_0.png" type="Texture2D" id=3]
[ext_resource path="res://Resources/Graphics/VPSUI/play_0.png" type="Texture2D" id=4]
[ext_resource path="res://Resources/Graphics/VPSUI/health_0.png" type="Texture2D" id=5]
[ext_resource path="res://Resources/Graphics/VPSUI/sleep_0.png" type="Texture2D" id=6]
[ext_resource path="res://Resources/Graphics/VPSUI/food_5.png" type="Texture2D" id=7]
[ext_resource path="res://Resources/Graphics/VPSUI/food_0.png" type="Texture2D" id=8]
[ext_resource path="res://Resources/Graphics/VPSUI/pet_5.png" type="Texture2D" id=9]
[ext_resource path="res://Resources/Graphics/VPSUI/health_5.png" type="Texture2D" id=10]
[ext_resource path="res://Resources/Graphics/VPS/vps_unit.png" type="Texture2D" id=11]
[ext_resource path="res://VPSScripts/Home/UIContainer.gd" type="Script" id=12]

[node name="UIContainer" type="MarginContainer"]
offset_right = 72.0
offset_bottom = 16.0
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 72.0
offset_bottom = 87.0
texture = ExtResource( 11 )

[node name="FullnessUI" type="Node2D" parent="."]
position = Vector2( 9, 8 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="FullnessUI"]
offset_left = -4.0
offset_top = -2.0
offset_right = 10.0
offset_bottom = 3.0
step = 20.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="AwakenessUI" type="Node2D" parent="."]
position = Vector2( 43, 8 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="AwakenessUI"]
offset_left = -21.0
offset_top = -3.0
offset_right = -8.0
offset_bottom = 3.0
step = 16.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="FunUI" type="Node2D" parent="."]
position = Vector2( 77, 8 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="FunUI"]
offset_left = -38.0
offset_top = -2.0
offset_right = -25.0
offset_bottom = 3.0
step = 20.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetHappinessUI" type="Node2D" parent="."]
position = Vector2( 113, 8 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="PetHappinessUI"]
offset_left = -57.0
offset_top = -2.0
offset_right = -46.0
offset_bottom = 3.0
step = 20.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 9 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SickHappinessUI" type="Node2D" parent="."]
visible = false
position = Vector2( 111, 8 )

[node name="TextureProgressBar" type="TextureProgressBar" parent="SickHappinessUI"]
offset_left = -55.0
offset_top = -3.0
offset_right = -49.0
offset_bottom = 3.0
step = 20.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 10 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
